--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "acacha/user",
+    "name": "acacha/user-fork",
     "type": "library",
     "description": "A boosted User for Laravel",
     "keywords": [
