--- a/composer.json
+++ b/composer.json
@@ -17,8 +17,8 @@
         }
     ],
     "require": {
-        "php": "~5.6|~7.0",
-        "laravel/framework": "^6.0"
+        "php": "^7.1.3",
+        "laravel/framework": "^6.0",
     },
     "require-dev": {
         "phpunit/phpunit" : "~4.0||~5.0",
